--- a/app/src/main/res/layout/fragment_friends.xml
+++ b/app/src/main/res/layout/fragment_friends.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+<android.support.v4.widget.SwipeRefreshLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/swiperefresh"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
 
     <TextView
         android:id="@+id/ft1"
@@ -11,7 +13,6 @@
         android:layout_above="@+id/fb1"
         android:layout_alignParentStart="true"
         android:layout_marginBottom="49dp"
-        android:text="You have no friends on your list, click on the top right to add"
         android:textAppearance="@android:style/TextAppearance.Material.Notification.Info"
         android:textSize="14sp"
         android:visibility="invisible"/>
