--- a/app/src/main/res/layout/fragment_friends.xml
+++ b/app/src/main/res/layout/fragment_friends.xml
@@ -1,37 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.SwipeRefreshLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/swiperefresh"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
 
-
-    <TextView
-        android:id="@+id/ft1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/fb1"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="49dp"
-        android:textAppearance="@android:style/TextAppearance.Material.Notification.Info"
-        android:textSize="14sp"
-        android:visibility="invisible"/>
-
-    <Button
-        android:id="@+id/fb1"
+    <GridLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="64dp"
-        android:text="Add Friend from contacts"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"/>
+        android:layout_height="match_parent"
+        android:rowCount="2">
+
+        <Button
+            android:id="@+id/fb1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_column="0"
+            android:layout_row="0"
+            android:elevation="1dp"
+            android:text="@string/add_friend_from_contacts"
+            android:textAlignment="center"/>
 
     <ListView
         android:id="@+id/flw1"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/ft1"
-        android:layout_centerHorizontal="true"
+        android:layout_column="0"
+        android:layout_marginBottom="40dp"
+        android:layout_marginTop="50dp"
+        android:layout_row="0"
+        android:divider="@color/colorPrimary"
+        android:dividerHeight="1px"
         android:visibility="visible"/>
-
-</RelativeLayout>
+    </GridLayout>
