--- a/app/src/main/res/layout/fragment_friends.xml
+++ b/app/src/main/res/layout/fragment_friends.xml
@@ -1,29 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-    <GridLayout
+<RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:rowCount="2">
 
-        <Button
-            android:id="@+id/fb1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_column="0"
-            android:layout_row="0"
-            android:elevation="1dp"
-            android:text="@string/add_friend_from_contacts"
-            android:textAlignment="center"/>
-
     <ListView
         android:id="@+id/flw1"
-        android:layout_column="0"
-        android:layout_marginBottom="40dp"
-        android:layout_marginTop="50dp"
-        android:layout_row="0"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:divider="@color/colorPrimary"
         android:dividerHeight="1px"
-        android:visibility="visible"/>
-    </GridLayout>
+        android:visibility="visible"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"/>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/ffab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_gravity="bottom|end"
+        android:layout_marginBottom="60dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="4dp"
+        android:clickable="true"
+        android:visibility="visible"
+        app:backgroundTint="@color/colorPrimary"
+        app:elevation="0dp"
+        app:fabSize="normal"
+        app:layout_anchorGravity="bottom|right|end"
+        app:srcCompat="@android:drawable/ic_input_add"/>
+    </RelativeLayout>
