Fixed some bugs and added logic (friends are now added and deleted properly when the are manipulated from view)

--- a/app/src/main/res/layout/fragment_user_info.xml
+++ b/app/src/main/res/layout/fragment_user_info.xml
@@ -29,13 +29,13 @@
                 android:id="@+id/textView"
                 android:layout_weight="1"
                 android:text="@string/id"
-                android:textAppearance="@android:style/TextAppearance.Material.Large"/>
+                android:textAppearance="@android:style/TextAppearance.Material.Medium"/>
 
             <TextView
                 android:id="@+id/userInfoId"
                 android:layout_weight="1"
                 android:text="ID"
-                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
+                android:textAppearance="@android:style/TextAppearance.Material.Medium"/>
 
         </TableRow>
 
@@ -49,13 +49,13 @@
                 android:id="@+id/textView2"
                 android:layout_weight="1"
                 android:text="@string/name"
-                android:textAppearance="@android:style/TextAppearance.Material.Large"/>
+                android:textAppearance="@android:style/TextAppearance.Material.Medium"/>
 
             <TextView
                 android:id="@+id/userInfoName"
                 android:layout_weight="1"
                 android:text="NAME"
-                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
+                android:textAppearance="@android:style/TextAppearance.Material.Medium"/>
         </TableRow>
 
         <TableRow
@@ -67,13 +67,30 @@
                 android:id="@+id/textView3"
                 android:layout_weight="1"
                 android:text="@string/email"
-                android:textAppearance="@android:style/TextAppearance.Material.Large"/>
+                android:textAppearance="@android:style/TextAppearance.Material.Medium"/>
 
             <TextView
                 android:id="@+id/userInfoEmail"
                 android:layout_weight="1"
                 android:text="EMAIL"
-                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
+                android:textAppearance="@android:style/TextAppearance.Material.Medium"/>
+        </TableRow>
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="5dip">
+
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_weight="1"
+                android:text="@string/friendCount"
+                android:textAppearance="@android:style/TextAppearance.Material.Medium"/>
+
+            <TextView
+                android:id="@+id/userInfoFriendCount"
+                android:layout_weight="1"
+                android:text=""
+                android:textAppearance="@android:style/TextAppearance.Material.Medium"/>
         </TableRow>
     </TableLayout>
 
