Frien Information page added

--- a/app/src/main/res/layout/fragment_friends.xml
+++ b/app/src/main/res/layout/fragment_friends.xml
@@ -7,6 +7,13 @@
     android:layout_height="match_parent"
     android:rowCount="2">
 
+    <TextView
+        android:id="@+id/datetf"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="300dp"
+        />
+
     <ListView
         android:id="@+id/flw1"
         android:layout_width="match_parent"
