--- a/app/src/main/res/layout/activity_friend_info.xml
+++ b/app/src/main/res/layout/activity_friend_info.xml
@@ -1,10 +1,79 @@
-<?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+
+<GridLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="s3585826.assignment1.FriendInfo">
+    android:rowCount="2"
+    android:columnCount="2"
+    tools:context=".UserInfo">
 
-</android.support.constraint.ConstraintLayout>
+    <TableLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="10dp"
+            android:padding="5dip">
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_weight="1"
+                android:text="@string/id"
+                android:textAppearance="@android:style/TextAppearance.Material.Medium"/>
+
+            <TextView
+                android:id="@+id/friendInfoId"
+                android:layout_weight="1"
+                android:text="ID"
+                android:textAppearance="@android:style/TextAppearance.Material.Medium"/>
+
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="10dp"
+            android:padding="5dip">
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_weight="1"
+                android:text="@string/name"
+                android:textAppearance="@android:style/TextAppearance.Material.Medium"/>
+
+            <TextView
+                android:id="@+id/friendInfoName"
+                android:layout_weight="1"
+                android:text="NAME"
+                android:textAppearance="@android:style/TextAppearance.Material.Medium"/>
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="5dip">
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_weight="1"
+                android:text="@string/email"
+                android:textAppearance="@android:style/TextAppearance.Material.Medium"/>
+
+            <TextView
+                android:id="@+id/friendInfoEmail"
+                android:layout_weight="1"
+                android:text="EMAIL"
+                android:textAppearance="@android:style/TextAppearance.Material.Medium"/>
+        </TableRow>
+    </TableLayout>
+</GridLayout>
+
