--- a/app/src/main/res/layout/add_meeting.xml
+++ b/app/src/main/res/layout/add_meeting.xml
@@ -1,24 +1,115 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<GridLayout
+    android:id="@+id/fragmentContainer"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <Button android:id="@+id/select_friends_button"
-        android:layout_width="match_parent" android:layout_height="wrap_content"
-        android:text="Friends"/>
-    <Button android:id="@+id/select_date_button"
-        android:layout_width="match_parent" android:layout_height="wrap_content"
-        android:text="Date"/>
-    <Button android:id="@+id/select_start_time_button"
-        android:layout_width="match_parent" android:layout_height="wrap_content"
-        android:text="time"/>
-    <Button android:id="@+id/select_end_time_button"
-        android:layout_width="match_parent" android:layout_height="wrap_content"
-        android:text="time"/>
-    <Button android:id="@+id/select_loaca_button_button"
-        android:layout_width="match_parent" android:layout_height="wrap_content"
-        android:text="location"/>
+    <TableLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
 
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="10dp"
+            android:padding="5dip">
 
-</LinearLayout>
+            <TextView
+                android:id="@+id/textView"
+                android:layout_weight="1"
+                android:text="@string/title"
+                android:textAppearance="@android:style/TextAppearance.Material.Medium"/>
+
+            <EditText
+                android:id="@+id/editTextId"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:inputType="textPersonName"
+                android:text="Name"/>
+
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="10dp"
+            android:padding="5dip">
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_weight="1"
+                android:text="@string/choose_friends"
+                android:textAppearance="@android:style/TextAppearance.Material.Medium"/>
+
+            <Button
+                android:id="@+id/chooseFriendsButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center|center_horizontal"
+                android:text="Choose Friends"/>
+
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="5dip">
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_weight="1"
+                android:text="@string/choose_location"
+                android:textAppearance="@android:style/TextAppearance.Material.Medium"/>
+
+            <Button
+                android:id="@+id/chooseLocationButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center|center_horizontal"
+                android:text="Choose Location"/>
+
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="5dip">
+
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_weight="1"
+                android:text="@string/choose_date"
+                android:textAppearance="@android:style/TextAppearance.Material.Medium"/>
+
+            <Button
+                android:id="@+id/chooseDateButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center|center_horizontal"
+                android:text="Choose Date"/>
+
+        </TableRow>
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="5dip">
+
+            <Button
+                android:id="@+id/editButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center|center_horizontal"
+                android:text="Done"/>
+        </TableRow>
+
+    </TableLayout>
+</GridLayout>
+
