--- a/app/src/main/res/layout/activity_friend_info.xml
+++ b/app/src/main/res/layout/activity_friend_info.xml
@@ -91,6 +91,23 @@
                 android:text="BIRTHDAY"
                 android:textAppearance="@android:style/TextAppearance.Material.Medium"/>
         </TableRow>
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="5dip">
+
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_weight="1"
+                android:text="@string/location"
+                android:textAppearance="@android:style/TextAppearance.Material.Medium"/>
+
+            <TextView
+                android:id="@+id/friendInfoLocation"
+                android:layout_weight="1"
+                android:text="Location"
+                android:textAppearance="@android:style/TextAppearance.Material.Medium"/>
+        </TableRow>
     </TableLayout>
 </GridLayout>
 
