--- a/app/src/main/res/layout/fragment_user_info.xml
+++ b/app/src/main/res/layout/fragment_user_info.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:rowCount="2"
     android:columnCount="2"
-    tools:context=".UserInfo">
+    tools:context=".Fragments.MyDetailsFragment">
 
     <TableLayout
         android:layout_width="match_parent"
