--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="s3585826.assignment1.MainActivity">
+    tools:context="s3585826.assignment1.Activities.MainActivity">
 
     <android.support.v4.view.ViewPager
         android:id="@+id/container"
