--- a/app/src/main/res/menu/menu_main2.xml
+++ b/app/src/main/res/menu/menu_main2.xml
@@ -1,6 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:tools="http://schemas.android.com/tools"
-      tools:context=".FriendInfo">
+      tools:context=".Activities.FriendInfoActivity">
     <item
         android:id="@+id/menu_settings"
         android:orderInCategory="100"
