--- a/app/src/main/res/layout/activity_friend_info.xml
+++ b/app/src/main/res/layout/activity_friend_info.xml
@@ -1,7 +1,8 @@
 
-<GridLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:rowCount="2"
@@ -10,13 +11,7 @@
 
     <TableLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-        </TableRow>
+        android:layout_height="wrap_content">
 
         <TableRow
             android:layout_width="match_parent"
@@ -91,6 +86,7 @@
                 android:text="BIRTHDAY"
                 android:textAppearance="@android:style/TextAppearance.Material.Medium"/>
         </TableRow>
+
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -108,6 +104,18 @@
                 android:text="Location"
                 android:textAppearance="@android:style/TextAppearance.Material.Medium"/>
         </TableRow>
+
     </TableLayout>
-</GridLayout>
+
+    <fragment
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:context=".Activities.FriendInfoActivity" />
+
+</LinearLayout>
+
+
+
 
