--- a/app/src/main/res/layout/add_meeting.xml
+++ b/app/src/main/res/layout/add_meeting.xml
@@ -62,6 +62,46 @@
             android:padding="5dip">
 
             <TextView
+                android:id="@+id/textView6"
+                android:layout_weight="1"
+                android:text="@string/choose_start_time"
+                android:textAppearance="@android:style/TextAppearance.Material.Medium"/>
+
+            <Button
+                android:id="@+id/chooseStartTimeButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center|center_horizontal"
+                android:text="Choose Start Time"/>
+
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="5dip">
+
+            <TextView
+                android:id="@+id/textView7"
+                android:layout_weight="1"
+                android:text="@string/choose_start_time"
+                android:textAppearance="@android:style/TextAppearance.Material.Medium"/>
+
+            <Button
+                android:id="@+id/chooseEndTimeButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center|center_horizontal"
+                android:text="Choose End Time"/>
+
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="5dip">
+
+            <TextView
                 android:id="@+id/textView3"
                 android:layout_weight="1"
                 android:text="@string/choose_location"
