--- a/app/src/main/res/layout/activity_edit_friend_details.xml
+++ b/app/src/main/res/layout/activity_edit_friend_details.xml
@@ -27,13 +27,10 @@
                 android:text="@string/id"
                 android:textAppearance="@android:style/TextAppearance.Material.Medium"/>
 
-            <EditText
-                android:id="@+id/editTextId"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:inputType="textPersonName"
-                android:text="Name"/>
+            <TextView
+                android:id="@+id/friendInfoId"
+                android:layout_weight="1"
+                android:textAppearance="@android:style/TextAppearance.Material.Medium"/>
 
         </TableRow>
 
