--- a/app/src/main/res/layout/fragment_meetings.xml
+++ b/app/src/main/res/layout/fragment_meetings.xml
@@ -7,6 +7,12 @@
     android:layout_height="match_parent"
     android:rowCount="2">
 
+    <Button
+        android:id="@+id/sortingButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Toggle Sorting by time"/>
+
     <ListView
         android:id="@+id/mlw1"
         android:layout_width="match_parent"
