--- a/app/src/main/res/layout/activity_edit_friend_details.xml
+++ b/app/src/main/res/layout/activity_edit_friend_details.xml
@@ -15,24 +15,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="10dp"
-            android:padding="5dip">
-
-            <TextView
-                android:id="@+id/textView"
-                android:layout_weight="1"
-                android:text="@string/id"
-                android:textAppearance="@android:style/TextAppearance.Material.Medium"/>
-
-            <TextView
-                android:id="@+id/friendInfoId"
-                android:layout_weight="1"
-                android:textAppearance="@android:style/TextAppearance.Material.Medium"/>
-
-        </TableRow>
 
         <TableRow
             android:layout_width="match_parent"
@@ -51,7 +33,7 @@
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:inputType="textPersonName"
-                android:text="Name"/>
+                android:text=""/>
 
         </TableRow>
 
@@ -71,7 +53,7 @@
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:inputType="textPersonName"
-                android:text="Name"/>
+                android:text=""/>
 
         </TableRow>
         <TableRow
@@ -90,7 +72,7 @@
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:inputType="textPersonName"
-                android:text="Name"/>
+                android:text=""/>
         </TableRow>
         <TableRow
             android:layout_width="match_parent"
